testData/annotator/InvalidPackage/ImportPortTypeTestFixed.secarc
package InvalidPackage;
import org.neo4j.codegen.ExpressionToString;

component ImportPortTypeTest {

    accesscontrol off;

    port in String test;
}